fix: mobile tools spacing

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -410,7 +410,6 @@ header .nav-tools li a.icon-wrapper {
 
 /* language selector */
 header .nav-tools .nav-tools-language {
-  flex: 0 1 min-content;
   position: relative;
 }
 
